--- a/templates/chat.html
+++ b/templates/chat.html
@@ -19,9 +19,9 @@
                     <button id="add-friend-btn" class="btn btn-primary">
                         <i class="fas fa-user-plus"></i> Dodaj
                     </button>
-                    
-                    <button onclick="window.location.href='/logout'" class="btn btn-danger">
-                        <i class="fas fa-sign-out-alt"></i> Wyloguj
+
+                    <button id="logout-btn" class="btn btn-danger">
+                        <i class="fas fa-sign-out-alt"></i> <span id="logout-text">Wyloguj</span>
                     </button>
                 </div>
             </div>
