--- a/templates/chat.html
+++ b/templates/chat.html
@@ -20,9 +20,10 @@
                         <i class="fas fa-user-plus"></i> Dodaj
                     </button>
 
-                    <button id="logout-btn" class="btn btn-danger">
+                    <button id="logout-btn" class="btn btn-danger" onclick="handleLogoutClick()">
                         <i class="fas fa-sign-out-alt"></i> <span id="logout-text">Wyloguj</span>
                     </button>
+                    
                 </div>
             </div>
             
