--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -192,8 +192,8 @@
         <nav class="admin-nav">
             <a href="/admin_dashboard"><i class="fa fa-dashboard"></i> Dashboard</a>
             <a href="/flask_admin/"><i class="fa fa-cogs"></i> Pełny Panel</a>
-            <a href="{{ url_for('chat.chat') }}"><i class="fa fa-comments"></i> Czat</a>
-            <a href="{{ url_for('auth.logout') }}"><i class="fa fa-sign-out"></i> Wyloguj</a>
+            <a href="/chat"><i class="fa fa-comments"></i> Czat</a>
+            <a href="/logout"><i class="fa fa-sign-out"></i> Wyloguj</a>
         </nav>
     </header>
 
