--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/diagnostics" target="_blank">
+                        <a href="/flask_admin/diagnostics/" target="_blank">
                             <i class="fa fa-stethoscope"></i> Diagnostyka
                         </a>
                     </li>
